Bug 146641 - Calc Print Preview toolbars Scaling Factor control disappears when changing visibility of other buttons
Summary: Calc Print Preview toolbars Scaling Factor control disappears when changing v...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.2.6 target:7.3.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-01-07 15:20 UTC by Gabor Kelemen (Collabora)
Modified: 2022-01-09 16:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Calc Print Preview after changing a buttons visibility on the toolbar (210.23 KB, image/png)
2022-01-07 15:20 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2022-01-07 15:20:08 UTC
Created attachment 177377 [details]
Calc Print Preview after changing a buttons visibility on the toolbar

In Calc Print Preview the Scaling Factor control disappears when another buttons visibility is changed in the context menu - Visible Buttons submenu.

1, Open a new Calc document.
2, Go to the Print Preview (not the Print dialog)
3, Right click on the Print Preview toolbar, in the Visible Buttons submenu hide any of the buttons (except Scaling Factor)

Result: the Scaling Factor item disappears until the zoom is inside the Calc window, but reappears after clicking into another window.

This happens only with GTK3 UI, not with gen/qt5/Windows.

Started in 7.0 with commit:

https://git.libreoffice.org/core/+/bcd7eee9e074be5ffe153814664c8f0faf923f6b

author	Caolán McNamara <caolanm@redhat.com>	Wed Feb 12 21:17:48 2020 +0000
committer	Caolán McNamara <caolanm@redhat.com>	Thu Feb 13 14:52:16 2020 +0100

weld ScZoomSliderWnd ItemWindow

Adding CC to: Caolán McNamara
Comment 1 Commit Notification 2022-01-08 14:31:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5f6aed6016c33c3d2dae26789ac3b6b69f5edbba

tdf#146641 allocations attempted while hidden are discarded by gtk

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Caolán McNamara 2022-01-08 14:33:38 UTC
done in trunk, backports to 7-3 and 7-2 in gerrit
Comment 3 Commit Notification 2022-01-09 16:44:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/5dcfec0a31075723bf6b94c57d65b560da42df3b

tdf#146641 allocations attempted while hidden are discarded by gtk

It will be available in 7.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-01-09 16:44:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/8c9d8521677f63e22c79eff7399b9f76c06e8847

tdf#146641 allocations attempted while hidden are discarded by gtk

It will be available in 7.3.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.