tdf#146641 allocations attempted while hidden are discarded by gtk

Change-Id: I46288cf4c106e2763feba298f1c44dbbf6c85581